@startuml

title __SIMPLE CHAT's Class Diagram__\n

  namespace com.example.simple_chat {
    class com.example.simple_chat.BuildConfig {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.DBHelper {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.ImageViewActivity {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.LoginActivity {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.MainActivity {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.MyService {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.RecordContentProvider {
    }
  }
  

  namespace com.example.simple_chat {
    class com.example.simple_chat.RecordContract {
    }
  }
  

  namespace com.example.simple_chat {
    namespace field {
      class com.example.simple_chat.field.MessageType {
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace field {
      class com.example.simple_chat.field.RecordInfo {
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      class com.example.simple_chat.recycler_view_adapter.ChatAdapter {
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.CalendarViewHolder {
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.ImageViewHolder {
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.MusicViewHolder {
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder {
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.TextViewHolder {
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.TimeViewHolder {
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace util {
      class com.example.simple_chat.util.KeyboardUtil {
      }
    }
  }
  

  com.example.simple_chat.DBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.simple_chat.ImageViewActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.simple_chat.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.simple_chat.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.simple_chat.MainActivity o-- com.example.simple_chat.recycler_view_adapter.ChatAdapter : recordAdapter
  com.example.simple_chat.MyService -up-|> android.app.Service
  com.example.simple_chat.RecordContentProvider -up-|> android.content.ContentProvider
  com.example.simple_chat.recycler_view_adapter.ChatAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.simple_chat.recycler_view_adapter.ChatAdapter o-- com.example.simple_chat.MyService.MusicInfoBinder : binder
  com.example.simple_chat.recycler_view_adapter.view_holder.CalendarViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.ImageViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.MusicViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder o-- com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder.Value : value
  com.example.simple_chat.recycler_view_adapter.view_holder.TextViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.TimeViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
